--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "contelege-code-formatting",
-  "version": "1.0.1",
+  "name": "@contele/contelege-code-formatting",
+  "version": "1.0.0",
   "description": "Lib criada com objetivo de manter centralizadas as configurações de formatação de código usados em todos os projetos relacionados ao Contele Gestão de Equipes",
   "main": "index.js",
   "scripts": {
@@ -11,10 +11,10 @@
   "license": "ISC",
   "repository": {
     "type": "git",
-    "url": "https://github.com/seu-usuario/seu-repositorio.git"
+    "url": "https://github.com/contele/contele_ge_code_formatting.git"
   },
   "bugs": {
-    "url": "https://github.com/seu-usuario/seu-repositorio/issues"
+    "url": "https://github.com/contele/contele_ge_code_formatting/issues"
   },
   "files": [
     "eslintignore",
