feat: install dependecies

--- a/package.json
+++ b/package.json
@@ -1,24 +1,31 @@
 {
-  "name": "@contele/contelege-code-formatting",
-  "version": "1.0.0",
+  "name": "contelege-code-formatting",
+  "version": "1.0.3",
   "description": "Lib criada com objetivo de manter centralizadas as configurações de formatação de código usados em todos os projetos relacionados ao Contele Gestão de Equipes",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": ["formatting", "eslint", "prettier"],
+  "keywords": [
+    "formatting",
+    "eslint",
+    "prettier"
+  ],
   "author": "Contele",
   "license": "ISC",
   "repository": {
     "type": "git",
-    "url": "https://github.com/contele/contele_ge_code_formatting.git"
+    "url": "https://github.com/seu-usuario/seu-repositorio.git"
   },
   "bugs": {
-    "url": "https://github.com/contele/contele_ge_code_formatting/issues"
+    "url": "https://github.com/seu-usuario/seu-repositorio/issues"
   },
   "files": [
     "eslintignore",
     "eslintrc.js",
-    "prettierrc.json"
-  ]
+    "prettierrc.js"
+  ],
+  "devDependencies": {
+    "prettier": "^3.2.5"
+  }
 }
