--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "eslint-config-contelege",
-  "version": "1.0.12",
+  "version": "1.0.19",
   "description": "Lib criada com objetivo de manter centralizadas as configurações de formatação de código usados em todos os projetos relacionados ao Contele Gestão de Equipes",
   "main": "eslintrc.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "precommit": "eslint ."
+    "lint": "eslint .",
+    "lint:fix": "pnpm lint --fix"
   },
   "keywords": [
     "formatting",
@@ -26,11 +27,11 @@
     "eslintrc.js",
     "prettierrc.js"
   ],
-  "devDependencies": {
+  "dependencies": {
     "eslint": "^8.57.0",
     "eslint-config-universe": "^12.0.0",
-    "husky": "^9.0.11",
-    "lerna": "^8.1.2",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-unused-imports": "^3.1.0",
     "prettier": "^3.2.5"
   }
 }
