--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eslint-config-contelege",
-  "version": "1.0.31",
+  "version": "1.0.32",
   "description": "Lib criada com objetivo de manter centralizadas as configurações de formatação de código usados em todos os projetos relacionados ao Contele Gestão de Equipes",
   "main": "eslintrc.js",
   "scripts": {
@@ -25,7 +25,8 @@
   "files": [
     "eslintignore",
     "eslintrc.js",
-    "prettierrc.js"
+    "prettierrc.js",
+    "reorganize-hooks.js"
   ],
   "dependencies": {
     "eslint": "^8.57.0",
